# CSE-314A-6th-Man-Project

./: README.md
6thMan/: pyproject.toml
