[tool.poetry]
name = "6thman"
version = "0.1.0"
description = ""
authors = ["Nate Ackerman <a.nate@wustl.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
nba-api = "^1.1.13"
pandas = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
